--- a/Report.ipynb
+++ b/Report.ipynb
@@ -506,7 +506,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***147 words for 4.2 until here***"
+    "***145 words for 4.2 until here***"
    ]
   },
   {
@@ -543,7 +543,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***170 words***"
+    "***168 words***"
    ]
   },
   {
@@ -712,7 +712,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***310 words***"
+    "***289 words***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Further opimization using computational tools***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Several additional tools were used to further optimize the model. [OptKnock](https://github.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/blob/main/scripts/Optimization_OptKnock.ipynb) (Burgard 2003), [OptCouple](https://github.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/blob/main/scripts/Optimization_GrowthCouplingPotential.ipynb) (Jensen 2019), [OptGene](https://github.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/blob/main/scripts/Optimization_OptGene.ipynb) (Patil 2005) and [OptSwap](https://github.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/blob/main/scripts/Optimization_OptSwap.ipynb) (King 2013) were employed in an attempt to couple growth and production, reduce formation of byproducts and optimize cofactor balance. Finally, [Flux Scanning based on Enforced Objective Flux](https://github.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/blob/main/scripts/Optimization_FSEOF.ipynb) (FSEOF) was used to analyse overall flux changes and identify potential targets for up- and downregulation.\n",
+    "\n",
+    "Both OptKnock and OptCouple encountered an error which could not be resolved. OptGene did not return any gene targets for gene knock-ins. OptSwap did not return any gene targets for altered cofactor specificity, either with or without enforced flux towards malonic acid production. In an attempt to manually optimize cofactor usage the specificity of glyceraldehyde-3-phsophate dehydrogenase was changed from NAD(H) to NADP(H), which resulted in a slight increase in flux towards biomass accumulation. With methanol as substrate FSEOF resulted in 53 reactions with a flux change over 0.01 (figure 9). All of the reactions involved in carbon metabolism as well as reactions directly towards the beta-alanine metabolism have increased fluxes, acetyl-CoA is produced from acetyl instead of pyruvate, the amino acid metabolism stops entirely and the cell starts to metabolize amino acids to maintain ATP requirements. \n",
+    "\n",
+    "\n",
+    "![image.png](https://raw.githubusercontent.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/main/img/FSEOF.png)\n",
+    " \n",
+    "*Figure 9: Reactions with > 0.01 change in flux with a forced objective flux towards malonic acid production ranging form 0.18 to 1.8.*"
    ]
   },
   {
@@ -803,21 +824,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Several additional tools were used in an attempt to further optimize the model. OptKnock is an algorithm which aims to couple the production of a desired product with biomass accumulation by simulating knockout combinations in the model and comparing resulting flux balances (Burgard 2003). In a similar fashion OptGene simulates the addition of metabolic pathways to increase product yield and decrease flux towards undesired by-products (Patil 2005). OptCouple combines the previously mentioned strategies as well as optimizing medium composition (Jensen 2019). OptSwap optimizes cofactor utilization by altering the NAD(H) and NADP(H) specificity of oxidoreductase enzymes (King 2013). Finally, Flux Scanning based on Enforced Objective Flux (FSEOF) optimizes a model for biomass accumulation and then gradually forces flux towards a target metabolite to display the overall changes in flux balance, indicating potential gene targets for up- and downregulation (Choi 2010).\n",
-    "\n",
-    "Both OptKnock and OptCouple encountered an error which could not be resolved. OptGene did not return any gene targets for gene knock-ins. As the final step in malonic acid production reduces NADP+ to NADPH, we suspect the overproduction of malonic acid has a drastic effect on cofactor balance. Unfortunately OptSwap did not return any gene targets for altered cofactor specificity, either with or without enforced flux towards malonic acid production. In an attempt to manually optimize cofactor usage the specificity of glyceraldehyde-3-phsophate dehydrogenase was changed from NAD(H) to NADP(H), which resulted in a slight increase in flux towards biomass accumulation. With methanol as a substrate FSEOF resulted in 53 reactions with a flux change over 0.01 (figure 1). All of the reactions involved in carbon metabolism as well as reactions directly towards the beta-alanine metabolism have increased fluxes, acetyl-CoA is produced from acetyl instead of pyruvate, the amino acid metabolism stops entirely and the cell starts to metabolize amino acids to maintain ATP requirements. \n",
-    "\n",
-    "\n",
-    "![image.png](https://raw.githubusercontent.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/main/img/FSEOF.png)\n",
-    " \n",
-    "*Figure 9: Reactions with > 0.01 change in flux with a forced objective flux towards malonic acid production ranging form 0.18 to 1.8.*\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "***455 words***"
+    "***361 words***"
    ]
   },
   {
@@ -890,7 +897,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***175 words***"
+    "***169 words***"
    ]
   },
   {
@@ -899,9 +906,9 @@
    "source": [
     "## 5. Discussion (<500 words)\n",
     "\n",
-    "From the analysis it was shown that it should be possible to efficiently synthesise Malonic acid in *K. phaffii* using methanol as the substrate. The pathway of interest is through beta-alanine which was shown to aid in NADH regeneration. However, it was not possible to recreate the findings of (Miao 2021); that introduction of an alternative malonic-semialdehyde producing enzyme BABAT increased the flux towards the important precursor metabolite. Also, a knockout of malonic-semialdehyde consuming reactions did not change anything. Linear programming mathematically identifies the maxima and will therefore redirect fluxes in a manner that is not necessarily possible in vivo. Without enzymatic constraints, and with flux boundaries set to +- 1000, a biologically unattainable snapshot of fluxes can be presented. Therefore, comparison of two reactions such as BABAT and APATr may not be constructive. \n",
+    "From the analysis it was shown that it should be possible to efficiently synthesise Malonic acid in *K. phaffii* using methanol as the substrate. The pathway of interest is through beta-alanine which was shown to aid in NADH regeneration. However, it was not possible to recreate the findings of (Miao 2021); that introduction of an alternative malonic-semialdehyde producing enzyme BABAT increased the flux towards the important precursor metabolite. Also, a knockout of malonic-semialdehyde consuming reactions did not change anything and the OptSwap algorithm could not find any targets to improve cofactor balance in favor of production. Linear programming mathematically identifies the maxima and will therefore redirect fluxes in a manner that is not necessarily possible in vivo. Without enzymatic constraints, and with flux boundaries set to +- 1000, a biologically unattainable snapshot of fluxes can be presented. Therefore, comparison of two reactions such as BABAT and APATr may not be constructive. \n",
     "\n",
-    "However, tools employed such as FSEOF, FVA and visualizing the changes of fluxes in escher gives a good overview of what metabolic engineering strategies to implement. The most crucial change is to downregulate FALDtx and upregulate DAS, in order to redirect flux of formaldehyde towards the central carbon metabolism. But also the importance of oxaloacetate as a precursor was underlined. Instead of drawing it into the TCA, the ASPTAm is an important reaction that provides aspartate, that can be recycled for precursor generation but also drawn out for beta alanine production that can be further processed to malonic acid. Here it was shown that introducing the combination of phosphoenolpytuvate carboxykinase (ATP generating PPCK) and aspartase acting upon fumarate (ASPAML) led to more optimal phenotypic phase planes where more malonic acid can be produced at higher growth rates. These changes were, as mentioned implemented, in papers for beta-alanine and 3HP production, so the chance of succeeding is good.\n",
+    "Tools employed such as FSEOF, FVA and visualizing the changes of fluxes in escher gives a good overview of what metabolic engineering strategies to implement. The most crucial change is to downregulate FALDtx and upregulate DAS, in order to redirect flux of formaldehyde towards the central carbon metabolism. But also the importance of oxaloacetate as a precursor was underlined. Instead of drawing it into the TCA, the ASPTAm is an important reaction that provides aspartate, that can be recycled for precursor generation but also drawn out for beta alanine production that can be further processed to malonic acid. Here it was shown that introducing the combination of phosphoenolpytuvate carboxykinase (ATP generating PPCK) and aspartase acting upon fumarate (ASPAML) led to more optimal phenotypic phase planes where more malonic acid can be produced at higher growth rates. These changes were, as mentioned implemented, in papers for beta-alanine and 3HP production, so the chance of succeeding is good. However, it has to be noted that there is still a direct tradeoff between malonic acid production and growth.\n",
     "\n",
     "It should be investigated whether *K. Phaffii* actually can grow properly on methanol when genetically engineering a reroute of flux towards central carbon metabolism. It was shown in a study, that adaptive laboratory evolution induced a mutation upon the alcohol oxidase (AOD) and reduced formaldehyde formation, but still increased growth rate (Moser, 2017). The conclusion was that it is important to balance formaldehyde levels because it can be toxic to the organism. In theory, upregulation of DAS could aid in this balancing. This should be tested as the first thing, before implementing other changes in the production host.\n"
    ]
@@ -919,7 +926,7 @@
    "source": [
     "## 6. Conclusion (<200 words)\n",
     "\n",
-    "To generate a GSM of *K. Phaffii*, we first used KBase and CarveMe. The MEMOTE reports of those models either had a bad mass balance score or consisted of only three compartments. This led us to use the GSM iMT1026-v3 created by Tomàs-Gamisans et al in 2017 for further analysis. The pathways found in literature were compared and the most promising - the beta alanine pathway - was chosen for further analysis. Trying multiple model optimization techniques, we concluded that malonic acid production is possible using methanol as a substrate. This reaction has a severe impact on the growth of *K. Phaffii*. Therefore, it seems that the most promising strategy for our cell factory is to use an inducible system, allowing the strain to accumulate biomass before switching to malonic acid production. If initial lab tests prove that our pathway is feasible, a cost-benefit analysis needs to be done. In case of a positive outcome, the system can be leveraged to become a competitor on the global malonic acid production market."
+    "To generate a GSM of *K. Phaffii*, we first used KBase and CarveMe. The MEMOTE reports of those models either had a bad mass balance score or consisted of only three compartments. This led us to use the GSM iMT1026-v3 created by Tomàs-Gamisans et al in 2017 for further analysis. The pathways found in literature were compared and the most promising - the beta alanine pathway - was chosen for further analysis. Trying multiple model optimization techniques, we concluded that malonic acid production is possible using methanol as a substrate. This reaction has a severe impact on the growth of *K. Phaffii* and it was not possible to couple growth and production. Therefore, it seems that the most promising strategy for our cell factory is to use an inducible system, allowing the strain to accumulate biomass before switching to malonic acid production. If initial lab tests prove that our pathway is feasible, a cost-benefit analysis needs to be done. In case of a positive outcome, the system can be leveraged to become a competitor on the global malonic acid production market."
    ]
   },
   {
@@ -998,7 +1005,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1012,7 +1019,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
