--- a/scripts/Optimization_FSEOF.ipynb
+++ b/scripts/Optimization_FSEOF.ipynb
@@ -15,7 +15,7 @@
    "id": "c58703ab-062e-4d1f-8b59-daf56d3642f4",
    "metadata": {},
    "source": [
-    "The Flux Scanning based on Enforced Objective Flux (FSEOF) tool from Cameo can be used to predict gene targets for up- and donwregulation to improve the metabolic flux towards a product.\n",
+    "Flux Scanning based on Enforced Objective Flux (FSEOF) optimizes a model for biomass accumulation and then gradually forces flux towards a target metabolite to display the overall changes in flux balance, indicating potential gene targets for up- and downregulation (Choi 2010).\n",
     "\n",
     "Code taken from [source](https://cameo.bio/06-predict-gene-modulation-targets.html)."
    ]
