--- a/scripts/Optimization_GrowthCouplingPotential.ipynb
+++ b/scripts/Optimization_GrowthCouplingPotential.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# **The new OptKnock & OptCouple code**\n",
     "\n",
-    "OptCouple is an algorithm that combines knock-outs, knock-ins and media additions to couple metabolic flux towards a target metabolite with biomass accumulation. OptKnock tries to identify knock out targets which optimize metabolic flux towards a target metabolite by coupling production to growth.\n",
+    "OptCouple is an algorithm that combines knock-outs, knock-ins and media composition to couple metabolic flux towards a target metabolite with biomass accumulation. OptKnock tries to identify knock out targets which optimize metabolic flux towards a target metabolite by coupling production to growth (Jensen 2019).\n",
     "\n",
     "Code is minimized for convenience. Code taken from [source](https://github.com/biosustain/cameo/blob/devel/cameo/strain_design/deterministic/linear_programming.py)."
    ]
