--- a/scripts/Optimization_OptKnock.ipynb
+++ b/scripts/Optimization_OptKnock.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "**Note:** most of the code is extracted from [source](https://cameo.bio/05-predict-gene-knockout-strategies.html#optknock).\n",
     "\n",
-    "OptKnock is an algorithms that tries to identify knock out targets which optimize metabolic flux towards a target metabolite by coupling production to growth."
+    "is an algorithm which aims to couple the production of a desired product with biomass accumulation by simulating knockout combinations in a model and comparing resulting flux balances (Burgard 2003)."
    ]
   },
   {
