--- a/scripts/Optimization_OptSwap.ipynb
+++ b/scripts/Optimization_OptSwap.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "**Note:** most of the code is extracted from https://notebook.community/biosustain/cameo-notebooks/other/co-factor-swapping\n",
     "\n",
-    "OptSwap is an algorithm that aims to identify metabolic enzymes that can have their co-factor pairs (i.e. NAD+/NADH and NADP+/NADPH) swapped to obtain co-factor homeostasis which increases the metabolic flux towards a target metabolite."
+    "OptSwap is an algorithm that aims to identify oxidoreductase enzymes that can have their co-factor pairs (i.e. NAD+/NADH and NADP+/NADPH) swapped to obtain co-factor homeostasis which increases the metabolic flux towards a target metabolite (King 2013)."
    ]
   },
   {
