--- a/Report.ipynb
+++ b/Report.ipynb
@@ -622,7 +622,7 @@
    "source": [
     "***Methanol assimilation***:\n",
     "\n",
-    "Optimal utilisation of methanol could indeed be a step towards more sustainable production and better process economics. The drawbacks behind methanol assimilation are therefore further investigated. For visualisation, the template escher map for the comparable *S. cerevisiae* was used. After curation of some reaction IDs, the methanol uptake pathway and the important reactions in the beta-alanine pathway was added."
+    "Optimal utilisation of methanol could indeed be a step towards more sustainable production and better process economics. The drawbacks behind methanol assimilation are therefore further investigated. For visualisation, the template escher map for the comparable *S. cerevisiae* was used. After curation of reaction IDs, the methanol uptake pathway and the important reactions in the beta-alanine pathway was added."
    ]
   },
   {
@@ -685,7 +685,7 @@
    "source": [
     "With the same setup, but instead having beta-alanine as the product optimized for, FALDH2 and FDH have to constitute 67.58% of NADH generation. The resulting yield of beta-alanine becomes 0.36 g ala_B/g meoh while it almost doubles for malonate (0.62 g mln/g meoh).\n",
     "\n",
-    "It is clear that the NADH/NADPH balance is important for optimizing growth and improving productivity. Much experimentation with manual cofactor swaps was peformed to check for more optimal routes. It was managed to improve the base growth rate by swapping NADH with NADPH in GAPD in glycolysis, but only by 0.0022 h^-1 and it did not improve the phenotypic phase plane significantly."
+    "It is clear that the NADH/NADPH balance is important for optimizing growth and improving productivity. Much experimentation with manual cofactor swaps was peformed to check for more optimal routes. It was managed to improve the base growth rate by swapping NADH with NADPH in GAPD in glycolysis, but only by 0.0022 h^-1 and without significant changes in phenotypic phase planes."
    ]
   },
   {
@@ -708,7 +708,7 @@
    "source": [
     "Multiple computational tools were then employed in an attempt to couple methanol growth and malonate production, reduce formation of byproducts and optimize cofactor balance. These were [OptKnock](https://github.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/blob/main/scripts/Optimization_OptKnock.ipynb) (Burgard 2003), [OptCouple](https://github.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/blob/main/scripts/Optimization_GrowthCouplingPotential.ipynb) (Jensen 2019), [OptGene](https://github.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/blob/main/scripts/Optimization_OptGene.ipynb) (Patil 2005) and [OptSwap](https://github.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/blob/main/scripts/Optimization_OptSwap.ipynb) (King 2013). Finally, [Flux Scanning based on Enforced Objective Flux](https://github.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/blob/main/scripts/Optimization_FSEOF.ipynb) (FSEOF) was used to analyse overall flux changes and identify potential targets for up- and downregulation.\n",
     "\n",
-    "Both OptKnock and OptCouple encountered an error which could not be resolved. OptGene did not return any gene targets for gene knock-ins. OptSwap did not return any gene targets for altered cofactor specificity, either with or without enforced flux towards malonic acid production. With methanol as substrate FSEOF resulted in 53 reactions with a flux change over 0.01 (figure 9). All of the reactions involved in carbon metabolism as well as reactions directly towards the beta-alanine metabolism have increased fluxes, acetyl-CoA is produced from acetyl instead of pyruvate, the amino acid metabolism stops entirely and the cell starts to metabolize amino acids to maintain ATP requirements. \n",
+    "Both OptKnock and OptCouple encountered an error which could not be resolved. OptGene did not return any gene targets for gene knock-ins. OptSwap did not return any gene targets for altered cofactor specificity, either with or without enforced flux towards malonic acid production. FSEOF resulted in 53 reactions with a flux change over 0.01 (figure 9). All of the reactions involved in carbon metabolism as well as reactions directly towards the beta-alanine metabolism have increased fluxes, acetyl-CoA is produced from acetyl instead of pyruvate, the amino acid metabolism stops entirely and the cell starts to metabolize amino acids to maintain ATP requirements. \n",
     "\n",
     "\n",
     "![image.png](https://raw.githubusercontent.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/main/img/FSEOF.png)\n",
@@ -734,7 +734,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In a study (Borodina 2014) about 3-hydroxypropanoate production in *S. cerevisiae*, screening was peformed to identify the best hetereologous reaction for beta alinine to malonic-semialdehyde conversion (BABAT). Even though the reaction APAT2r is present in both *K. phaffii* and *S. cerevisiae* the conclusion was that a gene from *Bacillus cereus* should be inserted. However, FVA revealed that APAT2r and BABAT were equally effective in iMT1026.V3."
+    "In a study about 3-hydroxypropanoate production in *S. cerevisiae*, screening was peformed to identify the best hetereologous reaction for beta alinine to malonic-semialdehyde conversion (BABAT) (Borodina 2014). Even though the reaction APAT2r is present in both *K. phaffii* and *S. cerevisiae* the conclusion was that a gene from *Bacillus cereus* should be inserted. However, FVA revealed that APAT2r and BABAT were equally effective in iMT1026.V3."
    ]
   },
   {
