--- a/Report.ipynb
+++ b/Report.ipynb
@@ -825,7 +825,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The strategy in (Miao 2021) is to improve aspartate availability by supply from OAA. From the escher plots and FVA it should be noticed that the opposite is occuring. By strengthening the OAA production through CO2 fixation these fluxes could possibly be redirected. This was done by introducing phosphoenolpyruvate carboxykinase from *A. succinogenes* (Hu 2018). This was the first change that actually improved the phenotypic phase plane, allowing for large malonic acid production rates while still maintaining growth."
+    "The strategy in (Miao 2021) is to improve aspartate availability by supply from OAA. By strengthening the OAA production through CO2 fixation these fluxes could possibly be redirected. This was done by introducing phosphoenolpyruvate carboxykinase from *A. succinogenes* (Hu 2018). This was the first change that actually improved the phenotypic phase plane, allowing for large malonic acid production rates while still maintaining growth."
    ]
   },
   {
