Remove wordcount, reduce discussion

--- a/Report.ipynb
+++ b/Report.ipynb
@@ -44,13 +44,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***331 words***"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### 1.2 Literature review of the cell factory"
    ]
   },
@@ -94,14 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***500 words***"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 2. Problem definition (<300 words)"
+    "## 2. Problem definition"
    ]
   },
   {
@@ -115,18 +101,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "***170 words***"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "tags": []
    },
    "source": [
-    "## 3. Selection and assessment of existing GSM (<500 words)\n",
+    "## 3. Selection and assessment of existing GSM\n",
     "\n",
     "For *K. phaffii* (including under the name _Pichia pastoris_), three GSM models were published between 2010-2012 and were are the most complete and acknowledged models in literature at the time (Tomàs-Gamisans, 2016). We found all three, imported them through COBRA and ran tests on MEMOTE to check their quality. The memote reports can be found [here](https://github.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/tree/main/reports).\n",
     "\n",
@@ -147,14 +126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***456 words***"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 4. Computer-Aided Cell Factory Engineering (<1500 Words)"
+    "## 4. Computer-Aided Cell Factory Engineering"
    ]
   },
   {
@@ -179,13 +151,6 @@
     "The glycerol pathway was dropped because it needs B12 as a cofactor, which is not naturally present in *K. phaffii*.  \n",
     "\n",
     "The pathways are established by using the script [create_pathway](https://github.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/blob/main/scripts/create_pathway.ipynb), which inserts one or several new enzyms and deletes competing ones that divert flux from the pathway. See code for more detailed descriptions."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "***296 words***"
    ]
   },
   {
@@ -506,13 +471,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***147 words for 4.2 until here***"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### 4.2.3 Optimal O2 & methanol uptake\n",
     "Analysis of the influence of oxygen & methanol uptake on model performance. Three objective functions are investigated, the maximum malonic acid production, the maximum biomass growth and the maximum malonic acid production with a forced flux towards growth equal to half the maximum value. The constraint could only be applied on the oxygen uptake."
    ]
@@ -543,13 +501,6 @@
     "The optimal oxygen uptake rate depends on the metabolic objective and should therefore be determined for a fixed growth rate.  \n",
     "  \n",
     "The methanol uptake dynamics show that for a physically obtainable flux a linear increase in production can be achieved when the uptake rate is improved. Further details can be seen in the respective [script](https://github.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/blob/main/scripts/Pathway_evaluation.ipynb)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "***162 words***"
    ]
   },
   {
@@ -600,13 +551,6 @@
    "metadata": {},
    "source": [
     "Several substrates show better growth and production performance than methanol, which can be explained by the chemical energy contained in these substrates or the location where they enter the carbon metabolism. Clearly production and the growth can be increased by switching to a different substrate."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "***219 words***"
    ]
   },
   {
@@ -686,13 +630,6 @@
     "With the same setup, but instead having beta-alanine as the product optimized for, FALDH2 and FDH have to constitute 67.58% of NADH generation. The resulting yield of beta-alanine becomes 0.36 g ala_B/g meoh while it almost doubles for malonate (0.62 g mln/g meoh).\n",
     "\n",
     "It is clear that the NADH/NADPH balance is important for optimizing growth and improving productivity. Much experimentation with manual cofactor swaps was peformed to check for more optimal routes. It was managed to improve the base growth rate by swapping NADH with NADPH in GAPD in glycolysis, but only by 0.0022 h^-1 and without significant changes in phenotypic phase planes."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "***289 words***"
    ]
   },
   {
@@ -804,13 +741,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***361 words***"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "***Improving the aspartate supply***"
    ]
   },
@@ -877,45 +807,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***169 words***"
+    "## 5. Discussion\n",
+    "\n",
+    "The analyses show it should be possible to efficiently synthesise malonic acid in K. phaffii using methanol as substrate. Other substrates showed higher growth rates, but utilizing methanol does not compete with the food industry. Also, methanol induced regulation of K. phaffii allows for a two stage process, where a sugar can be used to grow to high cell densities and a subsequent substrate switch induces the production of malonic acid (Miao 2021). Analyses for oxygen and methanol uptake rate show that biomass growth and malonic acid production have different optima. Methanol repression was detected at very high fluxes, but this far exceeds experimentally obtained values (Tomàs‐Gamisans 2018). Therefore an increase of the methanol uptake flux would linearly improve growth and production of malonic acid.\n",
+    "\n",
+    "The pathway of interest is through beta-alanine which was shown to aid in NADH regeneration. However, it was not possible to recreate the findings of (Miao 2021); that introduction of an alternative malonic-semialdehyde producing enzyme BABAT increased the flux towards the important precursor metabolite. Knock-out of malonic-semialdehyde consuming reactions did not increase production and OptSwap could not find any targets to improve cofactor balance. Linear programming mathematically calculates maxima and will represent fluxes in a manner that is not necessarily realistic. Without enzymatic constraints and flux boundaries set to +- 1000, a biologically unattainable snapshot of fluxes can be presented. Therefore, comparison of two reactions such as BABAT and APATr may not be constructive.\n",
+    "\n",
+    "FSEOF, FVA and visualizing change in fluxes in escher gives a good overview of what metabolic engineering strategies to implement. The most crucial change is to downregulate FALDtx and upregulate DAS, in order to redirect flux of formaldehyde towards the central carbon metabolism. But also the importance of oxaloacetate as a precursor was underlined. Instead of drawing it into the TCA, the ASPTAm is an important reaction that provides aspartate, that can be recycled for precursor generation but also drawn out for beta alanine production that can be further processed to malonic acid. Here it was shown that introducing the combination of phosphoenolpytuvate carboxykinase (ATP generating PPCK) and aspartase acting upon fumarate (ASPAML) led to more optimal phenotypic phase planes where more malonic acid can be produced at higher growth rates. These changes were, as mentioned, implemented in papers for beta-alanine and 3HP production, so the chance of succeeding is good. However, it has to be noted that there is still a direct tradeoff between malonic acid production and growth.\n",
+    "\n",
+    "It should be investigated whether K. Phaffii actually can grow properly on methanol when genetically engineering a reroute of flux towards central carbon metabolism. It was shown in a study, that adaptive laboratory evolution induced a mutation upon the alcohol oxidase (AOD) and reduced formaldehyde formation, but still increased growth rate (Moser, 2017). The conclusion was that it is important to balance formaldehyde levels because it can be toxic to the organism. In theory, upregulation of DAS could aid in this balancing. This should be tested as the first thing, before implementing other changes in the production host."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Discussion (<500 words)\n",
-    "\n",
-    "From the analysis it was shown that it should be possible to efficiently synthesise malonic acid in *K. phaffii* using methanol as the substrate. Other substrates showed higher growth rates, but utilizing methanol does not compete with the food industry. Also the mthanol induced regulation of *K. phaffii* opens up the possiblity for a two stage process, where a sugar can be used to grow to high cell densities and then a substrate switch triggers the inducible promoter to start the malonic acid production (Miao 2021). The analyses for oxygen and methanol uptake rate show that biomass growth and malonic acid production have different optima. Methanol repression was detected at very high fluxes, but it is far from experimentally obtained values (Tomàs‐Gamisans 2018). Therefore an increase of the methanol uptake flux would linearly improve growth and production of malonic acid.\n",
-    "\n",
-    "The pathway of interest is through beta-alanine which was shown to aid in NADH regeneration. However, it was not possible to recreate the findings of (Miao 2021); that introduction of an alternative malonic-semialdehyde producing enzyme BABAT increased the flux towards the important precursor metabolite. Also, a knockout of malonic-semialdehyde consuming reactions did not change anything and the OptSwap algorithm could not find any targets to improve cofactor balance in favor of production. Linear programming mathematically identifies the maxima and will therefore redirect fluxes in a manner that is not necessarily possible in vivo. Without enzymatic constraints, and with flux boundaries set to +- 1000, a biologically unattainable snapshot of fluxes can be presented. Therefore, comparison of two reactions such as BABAT and APATr may not be constructive. \n",
-    "\n",
-    "Tools employed such as FSEOF, FVA and visualizing the changes of fluxes in escher gives a good overview of what metabolic engineering strategies to implement. The most crucial change is to downregulate FALDtx and upregulate DAS, in order to redirect flux of formaldehyde towards the central carbon metabolism. But also the importance of oxaloacetate as a precursor was underlined. Instead of drawing it into the TCA, the ASPTAm is an important reaction that provides aspartate, that can be recycled for precursor generation but also drawn out for beta alanine production that can be further processed to malonic acid. Here it was shown that introducing the combination of phosphoenolpytuvate carboxykinase (ATP generating PPCK) and aspartase acting upon fumarate (ASPAML) led to more optimal phenotypic phase planes where more malonic acid can be produced at higher growth rates. These changes were, as mentioned, implemented in papers for beta-alanine and 3HP production, so the chance of succeeding is good. However, it has to be noted that there is still a direct tradeoff between malonic acid production and growth.\n",
-    "\n",
-    "It should be investigated whether *K. Phaffii* actually can grow properly on methanol when genetically engineering a reroute of flux towards central carbon metabolism. It was shown in a study, that adaptive laboratory evolution induced a mutation upon the alcohol oxidase (AOD) and reduced formaldehyde formation, but still increased growth rate (Moser, 2017). The conclusion was that it is important to balance formaldehyde levels because it can be toxic to the organism. In theory, upregulation of DAS could aid in this balancing. This should be tested as the first thing, before implementing other changes in the production host.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "***540 words***"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 6. Conclusion (<200 words)\n",
+    "## 6. Conclusion\n",
     "\n",
     "To generate a GSM of *K. Phaffii*, we first used KBase and CarveMe. The MEMOTE reports of those models either had a bad mass balance score or consisted of only three compartments. This led us to use the GSM iMT1026-v3 created by Tomàs-Gamisans et al in 2017 for further analysis. The pathways found in literature were compared and the most promising - the beta alanine pathway - was chosen for further analysis. Trying multiple model optimization techniques, we concluded that malonic acid production is possible using methanol as a substrate. This reaction has a severe impact on the growth of *K. Phaffii* and it was not possible to couple growth and production. Therefore, it seems that the most promising strategy for our cell factory is to use an inducible system, allowing the strain to accumulate biomass before switching to malonic acid production. If initial lab tests prove that our pathway is feasible, a cost-benefit analysis needs to be done. In case of a positive outcome, the system can be leveraged to become a competitor on the global malonic acid production market."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "***186 words***"
    ]
   },
   {
@@ -987,7 +896,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1001,7 +910,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
