--- a/Report.ipynb
+++ b/Report.ipynb
@@ -824,7 +824,7 @@
    "source": [
     "## 6. Conclusion\n",
     "\n",
-    "To generate a GSM of *K. Phaffii*, we first used KBase and CarveMe. The MEMOTE reports of those models either had a bad mass balance score or consisted of only three compartments. This led us to use the GSM iMT1026-v3 created by Tomàs-Gamisans et al in 2017 for further analysis. The pathways found in literature were compared and the most promising - the beta alanine pathway - was chosen for further analysis. Trying multiple model optimization techniques, we concluded that malonic acid production is possible using methanol as a substrate. This reaction has a severe impact on the growth of *K. Phaffii* and it was not possible to couple growth and production. Therefore, it seems that the most promising strategy for our cell factory is to use an inducible system, allowing the strain to accumulate biomass before switching to malonic acid production. If initial lab tests prove that our pathway is feasible, a cost-benefit analysis needs to be done. In case of a positive outcome, the system can be leveraged to become a competitor on the global malonic acid production market."
+    "From a literature review of recent *K phaffii* GSMs and comparison to CarveMe and KBase reconstructions, iMT1026.V3 was chosen for the computational analysis of malonic acid production, utilizing methanol as substrate. Multiple production pathways were enumerated and compared for different carbon sources. Of most interest was the beta-alanine pathway, that with its NADH regenerating end-step can aid the overall production of reducing power. This is important, because Escher visualisation and FSEOF revealed that the formaldehyde flux should be shifted towards the central carbon metabolism to increase malonic acid formation. Less carbon will then be available for NADH production in the other branch of methanol uptake. Both manual and algorithmic predictions were implemented to test if this metabolic shift could be optimized, currently without any significant results. Precursor optimization entailed small improvements in the balance between growth and production. An interesting strategy, is to use an inducible system, allowing the strain to accumulate biomass before switching to malonic acid production. If initial lab tests prove that this is feasible, a cost-benefit analysis needs to be done. In case of a positive outcome, the system can be leveraged to become a competitor on the global malonic acid production market."
    ]
   },
   {
@@ -900,7 +900,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -914,7 +914,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
