Correct figure and table numbering

--- a/Report.ipynb
+++ b/Report.ipynb
@@ -109,7 +109,7 @@
     "\n",
     "For *K. phaffii* (including under the name _Pichia pastoris_), three GSM models were published between 2010-2012 and were are the most complete and acknowledged models in literature at the time (Tomàs-Gamisans, 2016). We found all three, imported them through COBRA and ran tests on MEMOTE to check their quality. The memote reports can be found [here](https://github.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/tree/main/reports).\n",
     "\n",
-    "*Table 1*: \n",
+    "*Table 1*: Comparison of GSM found in literature.\n",
     "\n",
     "|                            | PpaMBEL1254 | iPP668 | iLC915 |\n",
     "|----------------------------|-------------|--------|--------|\n",
@@ -464,6 +464,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "*Figure 3*: Phenotypic phase planes for the yields of all pathways."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Table [X] and graph [Y] describe the absolute values for carbon yield and malonic acid production, as well as the dependency on growth rate. The beta-alanine and the malonyl-coa transferase pathway show the best performance with higher absolute values and a curvature that indicates higher production. Based on these results, the oxidoreductive malonly-coa and lactate pathways are not considered for further analysis."
    ]
   },
@@ -479,7 +486,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Table 4: Optimal oxygen uptake rate for the respective pathways and objective function in the form of (O2 uptake rate, maximum flux)*![O2 uptake table](https://raw.githubusercontent.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/main/img/o2_uptake_table.PNG \"O2 uptake table\")\n",
+    "*Table 4*: Optimal oxygen uptake rate for the respective pathways and objective function in the form of (O2 uptake rate, maximum flux)\n",
+    "\n",
+    "![O2 uptake table](https://raw.githubusercontent.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/main/img/o2_uptake_table.PNG \"O2 uptake table\")\n",
     "\n",
     "\n",
     "![O2 uptake graph](https://raw.githubusercontent.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/main/img/o2_uptake.png \"O2 uptake graph\")\n",
@@ -524,7 +533,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Table 6: Components of the minimal media for the respective pathwas and objective functions*\n",
+    "*Table 5: Components of the minimal media for the respective pathwas and objective functions*\n",
+    "\n",
     "![Minimal medium table](https://raw.githubusercontent.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/main/img/min_med_table.PNG \"Minimal medium table\")"
    ]
   },
@@ -543,7 +553,7 @@
     "\n",
     "![Substrates bargraph](https://raw.githubusercontent.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/main/img/substrates_bargraph.png \"Substrates bargraph\")\n",
     "\n",
-    "*Figure 7: Comparison of the maximum malonic acid production with 50% growth rate for all feasible carbon sources in the model*\n"
+    "*Figure 6: Comparison of the maximum malonic acid production with 50% growth rate for all feasible carbon sources in the model*\n"
    ]
   },
   {
@@ -604,7 +614,7 @@
    "metadata": {},
    "source": [
     "![Escher plot](https://raw.githubusercontent.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/0c066bedec6c5fda0dbaf87301ad6637f749702a/img/saved_map.svg \"Escher plot\")\n",
-    "*Figure 8: Escher with added pathways*"
+    "*Figure 7: Escher with added pathways*"
    ]
   },
   {
@@ -620,7 +630,7 @@
    "source": [
     "\n",
     "![Fva table](https://raw.githubusercontent.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/main/img/fva_pic.png \"Fva table\")\n",
-    "*Figure 9: Extract of FVA analysis at 50% growth optimizing for Malonic acid*"
+    "*Figure 8: Extract of FVA analysis at 50% growth optimizing for Malonic acid*"
    ]
   },
   {
@@ -794,6 +804,13 @@
     "    prod_env = production_envelope(model, [\"Ex_biomass\"], objective=\"Ex_mln\", carbon_sources=\"Ex_meoh\")\n",
     "    prod_env.plot(x='Ex_biomass',y='flux_maximum')\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Figure 10*: Improved phenotypic phase plane, after introduction of the ATP forming phosphoenolpyruvate carboxinase."
    ]
   },
   {
