Correct figure and table numbering

--- a/Report.ipynb
+++ b/Report.ipynb
@@ -533,7 +533,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Table 5: Components of the minimal media for the respective pathwas and objective functions*\n",
+    "*Table 5*: Components of the minimal media for the respective pathwas and objective functions\n",
     "\n",
     "![Minimal medium table](https://raw.githubusercontent.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/main/img/min_med_table.PNG \"Minimal medium table\")"
    ]
