Correct figure and table numbering

--- a/Report.ipynb
+++ b/Report.ipynb
@@ -471,7 +471,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Table [X] and graph [Y] describe the absolute values for carbon yield and malonic acid production, as well as the dependency on growth rate. The beta-alanine and the malonyl-coa transferase pathway show the best performance with higher absolute values and a curvature that indicates higher production. Based on these results, the oxidoreductive malonly-coa and lactate pathways are not considered for further analysis."
+    "Table 3 and Figure 3 describe the absolute values for carbon yield and malonic acid production, as well as the dependency on growth rate. The beta-alanine and the malonyl-coa transferase pathway show the best performance with higher absolute values and a curvature that indicates higher production. Based on these results, the oxidoreductive malonly-coa and lactate pathways are not considered for further analysis."
    ]
   },
   {
@@ -493,11 +493,11 @@
     "\n",
     "![O2 uptake graph](https://raw.githubusercontent.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/main/img/o2_uptake.png \"O2 uptake graph\")\n",
     "\n",
-    "*Figure 4: Maximum flux as a function of the O2 uptake rate for both pathways and three different objective functions, biomass growth rate values are scaled by a factor of 20*\n",
+    "*Figure 4:* Maximum flux as a function of the O2 uptake rate for both pathways and three different objective functions, biomass growth rate values are scaled by a factor of 20\n",
     "\n",
     "![MeOH uptake graph](https://raw.githubusercontent.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/main/img/meoh_uptake.png \"MeOH uptake graph\")\n",
     "\n",
-    "*Figure 5: Maximum flux as a function of the methanol uptake rate for both pathways and two different objective functions, biomass growth rate values are scaled by a factor of 20*\n",
+    "*Figure 5:* Maximum flux as a function of the methanol uptake rate for both pathways and two different objective functions, biomass growth rate values are scaled by a factor of 20\n",
     "\n"
    ]
   },
